<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemPets">

    <TextView
        android:id="@+id/titulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/laymar"
        android:fontFamily="sans-serif-black"
        android:text="@string/informaci_n_mascota"
        android:textSize="@dimen/textsize"
        app:layout_constraintBottom_toTopOf="@+id/nombreinfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/nombreinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre2"
        app:layout_constraintBottom_toTopOf="@+id/cientifico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/cientifico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_cientifico2"
        app:layout_constraintBottom_toTopOf="@+id/pelo"
        app:layout_constraintEnd_toStartOf="@+id/cientifico1"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <TextView
        android:id="@+id/pelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_pelo2"
        app:layout_constraintBottom_toTopOf="@+id/clase"
        app:layout_constraintEnd_toStartOf="@+id/pelo1"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <TextView
        android:id="@+id/clase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clase2"
        app:layout_constraintBottom_toTopOf="@+id/amor"
        app:layout_constraintEnd_toStartOf="@+id/clase1"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914" />

    <TextView
        android:id="@+id/amor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amorosidad2"
        app:layout_constraintBottom_toTopOf="@+id/enlac"
        app:layout_constraintEnd_toStartOf="@+id/amor1"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949" />

    <Button
        android:id="@+id/btnsalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <ImageView
        android:id="@+id/foto"
        android:layout_width="@dimen/laywi4"
        android:layout_height="@dimen/layhe3"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toTopOf="@+id/btnsalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964"
        app:srcCompat="@drawable/descarga" />

    <TextView
        android:id="@+id/nombreinfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview2"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/cientifico1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toEndOf="@+id/nombreinfo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/cientifico1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview23"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/pelo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/pelo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview34"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/clase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/clase1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview344"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/amor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/amor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview3455"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/enlace1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952"
        tools:ignore="TextViewEdits" />

    <ImageButton
        android:id="@+id/estrella"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color1"
        android:contentDescription="@string/todo33"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <TextView
        android:id="@+id/enlac"
        android:layout_width="@dimen/laywi5"
        android:layout_height="@dimen/layhe4"
        android:text="@string/enlace3"
        app:layout_constraintBottom_toTopOf="@+id/estrella"
        app:layout_constraintEnd_toStartOf="@+id/enlace1"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <TextView
        android:id="@+id/enlace1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:text="@string/textview2344"
        android:inputType="textWebEditText"
        app:layout_constraintBottom_toTopOf="@+id/foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904"
        tools:ignore="TextViewEdits"/>


</androidx.constraintlayout.widget.ConstraintLayout>