<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/root_layout3"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <GridView
        android:id="@+id/grvi"
        android:layout_width="@dimen/laywi"
        android:layout_height="@dimen/layhe"
        android:columnWidth="@dimen/colwi"
        android:horizontalSpacing="@dimen/horspa"
        android:numColumns="auto_fit"
        android:verticalSpacing="@dimen/verspa"
        app:layout_constraintBottom_toTopOf="@+id/Filtros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spiner1"
        android:layout_width="@dimen/laywi2"
        android:layout_height="48dp"
        android:contentDescription="@string/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <TextView
        android:id="@+id/Filtros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtros"
        android:textSize="@dimen/textviewsize1"
        app:layout_constraintBottom_toTopOf="@+id/spiner1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />
    <Button
        android:id="@+id/btnmeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

</androidx.constraintlayout.widget.ConstraintLayout>